@@ -1,5 +1,5 @@
 /*
- * Copyright 2023 DiffPlug
+ * Copyright 2023-2024 DiffPlug
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,12 +17,10 @@ package com.diffplug.spotless.glue.ktlint.compat;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.ServiceLoader;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -31,6 +29,7 @@ import com.pinterest.ktlint.core.KtLintRuleEngine;
 import com.pinterest.ktlint.core.LintError;
 import com.pinterest.ktlint.core.Rule;
 import com.pinterest.ktlint.core.RuleProvider;
+import com.pinterest.ktlint.core.RuleSetProviderV2;
 import com.pinterest.ktlint.core.api.EditorConfigDefaults;
 import com.pinterest.ktlint.core.api.EditorConfigOverride;
 import com.pinterest.ktlint.core.api.UsesEditorConfigProperties;
@@ -42,8 +41,6 @@ import com.pinterest.ktlint.core.api.editorconfig.IndentStyleEditorConfigPropert
 import com.pinterest.ktlint.core.api.editorconfig.InsertFinalNewLineEditorConfigPropertyKt;
 import com.pinterest.ktlint.core.api.editorconfig.MaxLineLengthEditorConfigPropertyKt;
 import com.pinterest.ktlint.core.api.editorconfig.RuleExecutionEditorConfigPropertyKt;
-import com.pinterest.ktlint.ruleset.experimental.ExperimentalRuleSetProvider;
-import com.pinterest.ktlint.ruleset.standard.StandardRuleSetProvider;
 
 import kotlin.Pair;
 import kotlin.Unit;
@@ -54,17 +51,15 @@ public class KtLintCompat0Dot48Dot0Adapter implements KtLintCompatAdapter {
 	private static final List<EditorConfigProperty<?>> DEFAULT_EDITOR_CONFIG_PROPERTIES;
 
 	static {
-		List<EditorConfigProperty<?>> list = new ArrayList<>();
-		list.add(CodeStyleEditorConfigPropertyKt.getCODE_STYLE_PROPERTY());
 		//noinspection deprecation
-		list.add(DisabledRulesEditorConfigPropertyKt.getDISABLED_RULES_PROPERTY());
-		//noinspection KotlinInternalInJava,deprecation
-		list.add(DisabledRulesEditorConfigPropertyKt.getKTLINT_DISABLED_RULES_PROPERTY());
-		list.add(IndentStyleEditorConfigPropertyKt.getINDENT_STYLE_PROPERTY());
-		list.add(IndentSizeEditorConfigPropertyKt.getINDENT_SIZE_PROPERTY());
-		list.add(InsertFinalNewLineEditorConfigPropertyKt.getINSERT_FINAL_NEWLINE_PROPERTY());
-		list.add(MaxLineLengthEditorConfigPropertyKt.getMAX_LINE_LENGTH_PROPERTY());
-		DEFAULT_EDITOR_CONFIG_PROPERTIES = Collections.unmodifiableList(list);
+		DEFAULT_EDITOR_CONFIG_PROPERTIES = List.of(
+				CodeStyleEditorConfigPropertyKt.getCODE_STYLE_PROPERTY(),
+				DisabledRulesEditorConfigPropertyKt.getDISABLED_RULES_PROPERTY(),
+				DisabledRulesEditorConfigPropertyKt.getKTLINT_DISABLED_RULES_PROPERTY(),
+				IndentStyleEditorConfigPropertyKt.getINDENT_STYLE_PROPERTY(),
+				IndentSizeEditorConfigPropertyKt.getINDENT_SIZE_PROPERTY(),
+				InsertFinalNewLineEditorConfigPropertyKt.getINSERT_FINAL_NEWLINE_PROPERTY(),
+				MaxLineLengthEditorConfigPropertyKt.getMAX_LINE_LENGTH_PROPERTY());
 	}
 
 	static class FormatterCallback implements Function2<LintError, Boolean, Unit> {
@@ -78,17 +73,17 @@ public class KtLintCompat0Dot48Dot0Adapter implements KtLintCompatAdapter {
 	}
 
 	@Override
-	public String format(final String text, Path path, final boolean isScript,
-			final boolean useExperimental,
-			Path editorConfigPath, final Map<String, String> userData,
-			final Map<String, Object> editorConfigOverrideMap) {
+	public String format(
+			String unix,
+			Path path,
+			Path editorConfigPath,
+			Map<String, Object> editorConfigOverrideMap) {
 		final FormatterCallback formatterCallback = new FormatterCallback();
 
-		Set<RuleProvider> allRuleProviders = new LinkedHashSet<>(
-				new StandardRuleSetProvider().getRuleProviders());
-		if (useExperimental) {
-			allRuleProviders.addAll(new ExperimentalRuleSetProvider().getRuleProviders());
-		}
+		Set<RuleProvider> allRuleProviders = ServiceLoader.load(RuleSetProviderV2.class, RuleSetProviderV2.class.getClassLoader())
+				.stream()
+				.flatMap(loader -> loader.get().getRuleProviders().stream())
+				.collect(Collectors.toUnmodifiableSet());
 
 		EditorConfigOverride editorConfigOverride;
 		if (editorConfigOverrideMap.isEmpty()) {
@@ -111,7 +106,7 @@ public class KtLintCompat0Dot48Dot0Adapter implements KtLintCompatAdapter {
 				editorConfig,
 				editorConfigOverride,
 				false)
-						.format(path, formatterCallback);
+				.format(unix, path, formatterCallback);
 	}
 
 	/**
@@ -134,22 +129,24 @@ public class KtLintCompat0Dot48Dot0Adapter implements KtLintCompatAdapter {
 		Pair<EditorConfigProperty<?>, ?>[] properties = editorConfigOverrideMap.entrySet().stream()
 				.map(entry -> {
 					EditorConfigProperty<?> property = supportedProperties.get(entry.getKey());
-					if (property != null) {
-						return new Pair<>(property, entry.getValue());
-					} else if (entry.getKey().startsWith("ktlint_")) {
+
+					if (property == null && entry.getKey().startsWith("ktlint_")) {
 						String[] parts = entry.getKey().substring(7).split("_", 2);
 						if (parts.length == 1) {
 							// convert ktlint_{ruleset} to {ruleset}
-							String qualifiedRuleId = parts[0];
+							String qualifiedRuleId = parts[0] + ":";
 							property = RuleExecutionEditorConfigPropertyKt.createRuleSetExecutionEditorConfigProperty(qualifiedRuleId);
 						} else {
 							// convert ktlint_{ruleset}_{rulename} to {ruleset}:{rulename}
 							String qualifiedRuleId = parts[0] + ":" + parts[1];
 							property = RuleExecutionEditorConfigPropertyKt.createRuleExecutionEditorConfigProperty(qualifiedRuleId);
 						}
-						return new Pair<>(property, entry.getValue());
-					} else {
+					}
+
+					if (property == null) {
 						return null;
+					} else {
+						return new Pair<>(property, entry.getValue());
 					}
 				})
 				.filter(Objects::nonNull)
