@@ -1,5 +1,5 @@
 /*
- * Copyright 2021-2022 DiffPlug
+ * Copyright 2021-2024 DiffPlug
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,11 +15,11 @@
  */
 package com.diffplug.spotless.glue.pom;
 
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
+import java.io.*;
+import java.lang.reflect.Method;
+import java.nio.charset.Charset;
+import java.nio.file.Files;
 
-import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -40,26 +40,63 @@ public class SortPomFormatterFunc implements FormatterFunc {
 
 	@Override
 	public String apply(String input) throws Exception {
-		// SortPom expects a file to sort, so we write the inpout into a temporary file
+		// SortPom expects a file to sort, so we write the input into a temporary file
 		File pom = File.createTempFile("pom", ".xml");
 		pom.deleteOnExit();
-		IOUtils.write(input, new FileOutputStream(pom), cfg.encoding);
+		try (BufferedWriter writer = new BufferedWriter(new FileWriter(pom, Charset.forName(cfg.encoding)))) {
+			writer.write(input);
+		}
 		SortPomImpl sortPom = new SortPomImpl();
-		sortPom.setup(new MySortPomLogger(), PluginParameters.builder()
+		PluginParameters.Builder builder = PluginParameters.builder()
 				.setPomFile(pom)
 				.setFileOutput(false, null, null, false)
-				.setEncoding(cfg.encoding)
-				.setFormatting(cfg.lineSeparator, cfg.expandEmptyElements, cfg.spaceBeforeCloseEmptyElement, cfg.keepBlankLines)
-				.setIndent(cfg.nrOfIndentSpace, cfg.indentBlankLines, cfg.indentSchemaLocation)
+				.setEncoding(cfg.encoding);
+		try {
+			builder = builder
+					.setFormatting(cfg.lineSeparator, cfg.expandEmptyElements, cfg.spaceBeforeCloseEmptyElement,
+							cfg.keepBlankLines, cfg.endWithNewline);
+		} catch (NoSuchMethodError e) {
+			try {
+				Method method = PluginParameters.Builder.class
+						.getMethod("setFormatting", String.class, boolean.class, boolean.class, boolean.class);
+				builder = (PluginParameters.Builder) method
+						.invoke(builder, cfg.lineSeparator, cfg.expandEmptyElements, cfg.spaceBeforeCloseEmptyElement,
+								cfg.keepBlankLines);
+			} catch (ReflectiveOperationException | RuntimeException ignore) {
+				throw e;
+			}
+		}
+		try {
+			builder = builder
+					.setIndent(cfg.nrOfIndentSpace, cfg.indentBlankLines, cfg.indentSchemaLocation,
+							cfg.indentAttribute);
+		} catch (NoSuchMethodError e) {
+			try {
+				Method method = PluginParameters.Builder.class
+						.getMethod("setIndent", int.class, boolean.class, boolean.class);
+				builder = (PluginParameters.Builder) method
+						.invoke(builder, cfg.nrOfIndentSpace, cfg.indentBlankLines, cfg.indentSchemaLocation);
+			} catch (ReflectiveOperationException | RuntimeException ignore) {
+				throw e;
+			}
+		}
+		builder = builder
 				.setSortOrder(cfg.sortOrderFile, cfg.predefinedSortOrder)
-				.setSortEntities(cfg.sortDependencies, cfg.sortDependencyExclusions, cfg.sortPlugins, cfg.sortProperties, cfg.sortModules, cfg.sortExecutions)
-				.setTriggers(false)
-				.build());
+				.setSortEntities(cfg.sortDependencies, cfg.sortDependencyExclusions, cfg.sortDependencyManagement,
+						cfg.sortPlugins, cfg.sortProperties, cfg.sortModules, cfg.sortExecutions)
+				.setIgnoreLineSeparators(false);
+		sortPom.setup(new MySortPomLogger(cfg.quiet), builder.build());
 		sortPom.sortPom();
-		return IOUtils.toString(new FileInputStream(pom), cfg.encoding);
+		return Files.readString(pom.toPath(), Charset.forName(cfg.encoding));
 	}
 
 	private static class MySortPomLogger implements SortPomLogger {
+		private final boolean quiet;
+
+		public MySortPomLogger(boolean quiet) {
+			this.quiet = quiet;
+		}
+
 		@Override
 		public void warn(String content) {
 			logger.warn(content);
@@ -67,7 +104,9 @@ public class SortPomFormatterFunc implements FormatterFunc {
 
 		@Override
 		public void info(String content) {
-			logger.info(content);
+			if (!quiet) {
+				logger.info(content);
+			}
 		}
 
 		@Override
